# superviseClient

./: CMakeLists.txt  main.cpp
head/: FaceDetection.h  superviseClientWidget.h
source/: FaceDetection.cpp  superviseClientWidget.cpp
ui/: superviseClientWidget.ui
